Fix encoding issue

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,10 @@ application {
     mainClass = 'com.example.app.App'
 }
 
+tasks.withType(JavaCompile) {
+    options.encoding = "UTF-8"
+}
+
 test {
     useJUnitPlatform()
 }
