--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,23 +6,23 @@ plugins {
 group 'univ.shibaura-it'
 version '1.0-SNAPSHOT'
 
+application {
+    mainClass = 'com.example.app.App'
+}
+
 repositories {
     mavenCentral()
 }
 
 dependencies {
     implementation project(':ui')
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 }
 
-application {
-    mainClass = 'com.example.app.App'
-}
-
-tasks.withType(JavaCompile) {
-    options.encoding('UTF-8')
-}
+//tasks.withType(JavaCompile) {
+//    options.encoding('UTF-8')
+//}
 
 test {
     useJUnitPlatform()
