--- a/netcom/build.gradle
+++ b/netcom/build.gradle
@@ -10,13 +10,13 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 }
 
-tasks.withType(JavaCompile) {
-    options.encoding('UTF-8')
-}
+//tasks.withType(JavaCompile) {
+//    options.encoding('UTF-8')
+//}
 
 test {
     useJUnitPlatform()
