--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,6 @@ rootProject.name = 'client_app'
 include 'ui'
 include 'app'
 include 'netcom'
+include 'data'
 
+enableFeaturePreview("TYPESAFE_PROJECT_ACCESSORS")
