--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,14 +15,11 @@ repositories {
 }
 
 dependencies {
-    implementation project(':ui')
+    implementation projects.ui
+    implementation projects.data
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 }
-
-//tasks.withType(JavaCompile) {
-//    options.encoding('UTF-8')
-//}
 
 test {
     useJUnitPlatform()
