--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,7 @@ repositories {
 dependencies {
     implementation projects.ui
     implementation projects.data
+    implementation 'org.json:json:20211205'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 }
