--- a/netcom/build.gradle
+++ b/netcom/build.gradle
@@ -10,7 +10,8 @@ repositories {
 }
 
 dependencies {
-    implementation 'javax.websocket:javax.websocket-api:1.1'
+    implementation 'org.glassfish.tyrus:tyrus-container-grizzly-client:2.0.1'
+    implementation 'com.google.code.gson:gson:2.8.9'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 }
