--- a/netcom/build.gradle
+++ b/netcom/build.gradle
@@ -10,8 +10,9 @@ repositories {
 }
 
 dependencies {
+    implementation projects.data
     implementation 'org.glassfish.tyrus:tyrus-container-grizzly-client:2.0.1'
-    implementation 'com.google.code.gson:gson:2.8.9'
+    implementation 'org.json:json:20211205'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 }
