--- a/data/build.gradle
+++ b/data/build.gradle
@@ -1,20 +1,3 @@
 plugins {
-    id 'java'
-}
-
-group 'univ.shibaura-it'
-version '1.0-SNAPSHOT'
-
-repositories {
-    mavenCentral()
-}
-
-dependencies {
-    implementation 'org.json:json:20211205'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
-}
-
-test {
-    useJUnitPlatform()
+    id 'client'
 }
