--- a/netcom/build.gradle
+++ b/netcom/build.gradle
@@ -1,22 +1,8 @@
 plugins {
-    id 'java'
-}
-
-group 'univ.shibaura-it'
-version '1.0-SNAPSHOT'
-
-repositories {
-    mavenCentral()
+    id 'client'
 }
 
 dependencies {
     implementation projects.data
     implementation 'org.glassfish.tyrus:tyrus-container-grizzly-client:2.0.1'
-    implementation 'org.json:json:20211205'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
-}
-
-test {
-    useJUnitPlatform()
 }
