--- a/ui/build.gradle
+++ b/ui/build.gradle
@@ -1,23 +1,7 @@
 plugins {
-    id 'java'
-}
-
-group 'univ.shibaura-it'
-version '1.0-SNAPSHOT'
-
-repositories {
-    mavenCentral()
+    id 'client'
 }
 
 dependencies {
     implementation projects.data
-    implementation 'org.json:json:20211205'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
-}
-
-compileJava.options.encoding("UTF-8")
-
-test {
-    useJUnitPlatform()
 }
